# MiniSearchEngine

./: .gitignore  README.md
SearchEngineCore/Indexing/: CMakeLists.txt  main.cpp
SearchEngineCore/Indexing/include/: Cloud.h  Node.h  Tree.h  compilar-ejecutar  parser.h  types.h
SearchEngineCore/Indexing/include/dddd/: Node.h  Tree.h
SearchEngineCore/Indexing/src/: Cloud.cpp  Node.cpp  Tree.cpp  parser.cpp
SearchEngineCore/PreProcessing/: CMakeLists.txt  README.md  preprocess.cpp  stopWords.txt
SearchEngineCore/PreProcessing/include/: parser.h  wordlist.h
SearchEngineCore/PreProcessing/src/: parser.cpp  wordlist.cpp
SearchEngineCore/SearchConsole/: CMakeLists.txt  README.md  engine.cpp
SearchEngineWeb/source/plantillas/: index.html
