cmake_minimum_required(VERSION 3.9)
set (CMAKE_CXX_STANDARD 11)
project(trie)
include_directories(include ../PreProcessing/include)
set(SOURCES ../PreProcessing/src/wordlist.cpp src/parser.cpp  src/Node.cpp src/Tree.cpp src/Cloud.cpp main.cpp)
add_executable(main_exe ${SOURCES})
target_link_libraries(main_exe)